# saju-engine

./: .env.example  .gitignore  .poetry-install-output.txt  .pre-commit-config.yaml  API_FIXES_COMPLETE.md  API_SPECIFICATION_v1.0.md  AUDIT_ACTION_PLAN.md  AUDIT_FIXES_REPORT.md  AUDIT_VERIFICATION_REPORT.md  BEFORE_AFTER_COMPARISON.md  BLOCKERS_AND_INCOMPLETE_REPORT.md  BRANCH_TENGODS_APPLIED.md  CHANGELOG.md  CHANGELOG_climate_advice_mvp_v1.md  CHANGELOG_gyeokguk_classifier_v1.md  CHANGELOG_gyeokguk_v1.md  CHANGELOG_llm_guard_v1.1.md  CHANGELOG_llm_guard_v1.md  CHANGELOG_luck_flow_v1.md  CHANGELOG_pattern_profiler_v1.md  CHANGELOG_yongshin_v1.md  CHAT_SEND_SPEC_v1.0.md  CI_CD_STATUS.md  CI_FAILURE_ROOT_CAUSE_ANALYSIS.md  CLAUDE_IMPLEMENTATION_SUMMARY.md  CODEBASE_AUDIT_PROMPT.md  CODEBASE_AUDIT_PROMPT_V2.md  CODEBASE_AUDIT_STUBS_PLACEHOLDERS.md  CODEBASE_CLEANUP_REPORT.md  CODEBASE_MAP.md  CODEBASE_MAP_v1.3.0.md  CODEX_AND_CODEBASE_SCAN_REPORT.md  COMBINATION_ELEMENT_INTEGRATION_PLAN.md  DATA_SOURCES.md  DEPRECATION_FIXES.md  DEVELOPMENT_HANDOFF.md  DUAL_YONGSHIN_V2_INTEGRATION_COMPLETE.md  ENGINE_ANALYSIS_REPORT.md  ENGINE_INTEGRATION_SESSION_REPORT.md  ENGINE_RETIREMENT_ANALYSIS.md  (+142 more)
baselines/: analysis_latency_history.csv  analysis_latency_latest.json
data/: README.md  terms_1900.csv  terms_1902.csv  terms_1903.csv  terms_1905.csv  terms_1906.csv  terms_1907.csv  terms_1908.csv  terms_1909.csv  terms_1910.csv  terms_1911.csv  terms_1912.csv  terms_1913.csv  terms_1915.csv  terms_1916.csv  terms_1917.csv  terms_1918.csv  terms_1919.csv  terms_1920.csv  terms_1921.csv  terms_1922.csv  terms_1923.csv  terms_1924.csv  terms_1925.csv  terms_1926.csv  terms_1927.csv  terms_1928.csv  terms_1929.csv  terms_1930.csv  terms_1931.csv  terms_1932.csv  terms_1933.csv  terms_1934.csv  terms_1936.csv  terms_1937.csv  terms_1938.csv  terms_1939.csv  terms_1940.csv  terms_1941.csv  terms_1942.csv  (+85 more)
design/: branch_tengods_methodology.md  elements_methodology.md  evidence_branch_tengods_spec.md  evidence_shensha_v2_spec.md  gyeokguk_methodology.md  lifecycle_methodology.md  nayin_glossary_en.md  references.md  relation_methodology.md  shensha_v2_methodology.md  strength_v2_methodology.md  yongshin_methodology.md
devtools/: sign_policies.py
docs/: CODEBASE_AUDIT_PROMPT.md  DEPENDENCY_INJECTION_MIGRATION.md  DEVSHELL_GUIDE.md  DEV_BOOTSTRAP.md  DISCLAIMERS.md  MONOREPO_IMPORT_FIX.md  OBSERVABILITY_GUIDE.md  PHASE2_FINAL_SUMMARY.md  PHASE2_HANDOFF_SCRIPTS_CLEANUP.md  PHASE2_MIGRATION_COMPLETE.md  PIP_SETUP_GUIDE.md  POETRY_184_MIGRATION_REPORT.md  POLICY_CONSOLIDATION_PLAN.md  POLICY_CONSOLIDATION_SUMMARY.md  PROXY_CLIENT_IDENTITY.md  (+23 more)
services/api-gateway/: README.md  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/tests/: test_health.py
services/common/: OTLP_TRACING_TEST_RESULTS.md  RATE_LIMIT_ACCURATE_TELEMETRY_RESULTS.md  README.md  __init__.py  app_factory.py  exceptions.py  handlers.py  policy_loader.py  pyproject.toml  trace.py
services/common/saju_common/: __init__.py  builtins.py  client_identity.py  container.py  file_solar_term_loader.py  interfaces.py  middleware.py  policy_loader.py  rate_limit.py  seasons.py  settings.py  token_bucket.lua  trace.py  tracing.py
services/common/saju_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/common/saju_common/engines/: __init__.py  annual.py  daily.py  luck.py  luck_components.py  luck_hierarchy.py  luck_output.py  monthly.py  policy_config.py  school.py  shensha.py
services/common/saju_common/engines/utils/: __init__.py  categories.py  jiazi.py  scoring.py  strength.py
services/common/tests/: test_client_identity.py  test_container.py  test_error_handling.py  test_middleware_logging.py  test_rate_limit.py  test_rate_limit.py.backup  test_saju_common.py  test_settings.py  test_tracing.py
services/entitlement-service/: .env.entitlements.example  .env.example  Dockerfile  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  README.md  pyproject.toml
services/entitlement-service/app/: __init__.py  config.py  database.py  db_types.py  main.py  models.py  rate_limiter.py
services/entitlement-service/app/instrumentation/: __init__.py  metrics.py
services/entitlement-service/app/middleware/: __init__.py  idempotency.py
services/entitlement-service/app/services/: __init__.py  fraud_detector.py  quota_service.py  ssv_verifier.py  token_service.py
services/entitlement-service/app/utils/: __init__.py  time_kst.py
services/entitlement-service/migrations/: 001_create_users.sql  002_create_entitlements.sql  003_create_token_ledger.sql  004_create_ad_rewards.sql  005_create_idempotency_keys.sql  006_create_indexes.sql
services/entitlement-service/tests/: conftest.py  test_fraud_detector.py  test_idempotency_middleware.py  test_integration_flows.py  test_perf_consume_load.py  test_quota_service.py  test_ssv_verifier.py  test_token_service.py  utils.py
services/pillars-service/: README.md  pyproject.toml
services/pillars-service/app/: main.py
services/pillars-service/app/api/: __init__.py  dependencies.py  routes.py
services/pillars-service/app/core/: __init__.py  canonical_calendar.py  constants.py  engine.py  evidence.py  input_validator.py  month.py  pillars.py  policies.py  resolve.py  strength.py  timezone_handler.py  wang.py
services/pillars-service/app/models/: __init__.py  pillars.py
services/pillars-service/schemas/: evidence_log_addendum_v1_2.json
services/pillars-service/tests/: conftest.py  test_compute.py  test_engine_compute.py  test_evidence_schema.py  test_health.py  test_month_branch.py  test_resolve.py  test_std_vs_lmt.py  test_strength.py  test_wang_state.py
services/tz-time-service/: README.md  pyproject.toml
services/tz-time-service/app/: main.py
services/tz-time-service/app/api/: __init__.py  dependencies.py  routes.py
services/tz-time-service/app/core/: __init__.py  converter.py  events.py
services/tz-time-service/app/models/: __init__.py  conversion.py
services/tz-time-service/tests/: conftest.py  test_routes.py
(+958 files in other folders)
