[project]
name = "saju-monorepo"
version = "0.1.0"
description = "사주 앱 v1.4 모놀리포 기반"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "isort==5.13.2",
  "ruff==0.6.4",
  "mypy==1.11.1",
  "pytest==8.3.2",
  "httpx==0.27.0",
  "fastapi==0.114.0",
  "uvicorn[standard]==0.30.3",
  "pytest-asyncio==0.23.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py311"
select = ["E", "F", "I", "C90"]
line-length = 100
exclude = [
  "docs",
  "data",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["services.common"]

