[project]
name = "saju-monorepo"
version = "0.1.0"
description = "사주 앱 v1.4 모놀리포 기반"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "isort==5.13.2",
  "ruff==0.6.4",
  "mypy==1.11.1",
  "pytest==8.3.2",
  "httpx==0.27.0",
  "fastapi==0.114.0",
  "uvicorn[standard]==0.30.3",
  "pytest-asyncio==0.23.8",
  "canonicaljson==2.0.0",
  "jsonschema==4.23.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  "docs",
  "data",
  "scripts",
  "devtools",
  "saju_codex_bundle_v1",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "C90"]
ignore = [
  "E402",  # many modules adjust sys.path for runtime compatibility
  "E501",  # long strings retained for policy text and docs
  "E701",
  "E702",
  "E714",
  "E731",
  "C901",
]

# TODO: Fix these in follow-up PR - baseline cleanup
[tool.ruff.lint.per-file-ignores]
# Complexity - needs refactoring
"services/analysis-service/app/core/relations.py" = ["C901"]
"services/analysis-service/app/core/strength.py" = ["C901"]
"services/analysis-service/tests/test_shensha_v2_policy.py" = ["C901"]
"services/pillars-service/app/core/input_validator.py" = ["C901"]
"services/pillars-service/app/core/strength.py" = ["C901"]

# Unused variables - needs cleanup
"services/analysis-service/app/core/luck.py" = ["F841"]
"services/analysis-service/app/core/policy_guards.py" = ["F841"]
"services/pillars-service/app/core/evidence.py" = ["F841", "E402"]

# Unused imports - needs removal
"services/astro-service/app/api/__init__.py" = ["F401"]
"services/pillars-service/app/api/__init__.py" = ["F401"]
"services/tz-time-service/app/api/__init__.py" = ["F401"]

# Import ordering - needs restructuring
"services/tz-time-service/app/core/events.py" = ["F841"]

# Line length - acceptable for tests and long assertions
"services/**/tests/**" = ["E501"]
"services/analysis-service/app/core/korean_enricher.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["services.common"]
