[project]
name = "saju-api-gateway"
version = "0.1.0"
description = "사주 앱 v1.4 API 게이트웨이 FastAPI 서비스"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.120,<0.121",
  "uvicorn[standard]>=0.30,<0.31",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<0.28",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.23,<0.24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true
