[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saju-common"
version = "1.4.0"
description = "Shared utilities and infrastructure for 사주 앱 v1.4 microservices"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Codex Team", email = "codex@saju.app"}
]
keywords = ["saju", "microservices", "fastapi", "rfc7807"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.120,<0.121",
    "starlette>=0.49,<0.50",
    "uvicorn>=0.30,<0.31",
    "pydantic>=2.0,<3.0",
    "canonicaljson>=2.0,<3.0",
    "jsonschema>=4.23,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "httpx>=0.27,<0.28",
    "black>=24.4,<25.0",
    "isort>=5.13,<6.0",
    "ruff>=0.6,<0.7",
    "mypy>=1.11,<2.0",
]

[project.urls]
Homepage = "https://github.com/dan914/saju-engine"
Documentation = "https://github.com/dan914/saju-engine/tree/main/services/common"
Repository = "https://github.com/dan914/saju-engine"
Issues = "https://github.com/dan914/saju-engine/issues"

[tool.setuptools]
packages = ["saju_common"]

[tool.setuptools.package-data]
saju_common = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "contract: Contract tests for RFC7807",
]
