[tool.poetry]
name = "entitlement-service"
version = "1.0.0"
description = "Token and Entitlement Management Service"
authors = ["Saju Engine Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
redis = "^5.0"
prometheus-client = "^0.19"
pydantic = "^2.7"
pydantic-settings = "^2.3"
tenacity = "^8.2"
cryptography = "^43.0"
canonicaljson = "^2.0"
apscheduler = "^3.10"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
fakeredis = "^2.21"
httpx = "^0.27"
ruff = "^0.1"
mypy = "^1.8"
hypothesis = "^6.112"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --maxfail=1 --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
