[project]
name = "saju-tz-time-service"
version = "0.1.0"
description = "Timezone conversion service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<0.115",
  "uvicorn[standard]>=0.30,<0.31",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<0.28",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.23,<0.24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app", "../.."]

[tool.coverage.run]
source = ["app"]
branch = true
